* Update Sonic 1 and 2 so that they work with multiple gamepads
* Bump most emulators and cores to newest git hash (check commits for specifics)
* Bump Crystal theme which now includes a new panel (boxart), 16:9, 4:3 and CRT versions
* Enable bezels on OGS, not fully tested yet
* Bump Genesis-plus-gx and Genesis-plus-gx-wide to support FM music
* Use DinguxFileManager as default on all platforms

Additions: 

* Added Chocolate-Doom
* Added SuperTux and SuperTuxKart to ports
* Added Imagemagick (mainly for screenshot manipulation from CLI)
* Added logos to the ports (Thanks to Dim!)
* Added vertical aspect ratio option to OGA/S
* Added gptokeyb to enable video controls on all devices with SDL support!
* Replace jslisten with gptokeyb to kill emulators
* Added easyrpg to es_systems.cfg
* Added Ecwolf with support for mods
* Added supermariowar to ports, on the first run a fake keyboard will be used, make sure you set your gamepad and restart the game, if you need to run the fake keyboard again delete /emuelec/configs/smw/nofakekeyb and run the game again.

Fixes: 

* Removed unused scripts, and fixed many small issues with scripts
* Fixed many script that were causing hangups or other issues
* Fixed gamecontrollerdb.sh it will now replace the UUID from the one in the db, this fixes weird controllers that use the same UUID as others (but are not the same)
* Fixed an issue with unicode characters not displaying correctly on the EEROMS partition (CN, JP, etc)
* Fix SonicCD Gamepad for the OGS
* Fix Pico-8 disappearing splore file
* Fix Scummvm game scan
* Fix brightness not restored after reboot on OGA/S, thanks to @miwasp, fixes issue #470
* Fixed issue with OGA/S OC not beeing applied correctly (this does not solve the random lockups on some devices)
* Fix backup/restore issues
* Fixed Retroach video recording
* Fixed Eduke not running when having lots or ROMS in ES, by enabling swap (much testing needed!)
* Fixed an issue with ES not playing .ogg music files in BGM